# ducktape-ui

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: data-table.md  parity.md
registry/: registry.json  schema.json
src/: ice.rs  lib.rs  main.rs  showcase.ice
src/ice/: components.ice  plugin.ice
src/ui/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  attachment.rs  avatar.rs  badge.rs  breadcrumb.rs  bubble.rs  button.rs  button_group.rs  calendar.rs  card.rs  carousel.rs  chart.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  data_table.rs  date_picker.rs  dialog.rs  direction.rs  drawer.rs  dropdown_menu.rs  empty_state.rs  field.rs  focus_control.rs  hover_card.rs  input.rs  input_group.rs  input_otp.rs  item.rs  kbd.rs  label.rs  marker.rs  menu.rs  menubar.rs  message.rs  (+31 more)
tests/: import.rs  install.rs
