[package]
name = "ducktape-ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "The source-owned UI toolkit for iced, built for Ducktape"
license = "MIT"
repository = "https://github.com/byeongsu-hong/ducktape-ui"
homepage = "https://github.com/byeongsu-hong/ducktape-ui"
default-run = "showcase"

[features]
showcase = ["dep:iced"]

[dependencies]
iced = { version = "=0.14.0", features = ["advanced"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "showcase"
path = "src/main.rs"
required-features = ["showcase"]

[[bin]]
name = "ducktape-ui"
path = "src/bin/ducktape-ui.rs"
